finished main api methods without docs, testing
