# api/internal/models/user.go
@@ -1,8 +1,15 @@
 package models
 
+// Model of info for initializing new user
+type NewUserData struct {
+	Name     string
+	Password string
+	Email    string
+}
+
 // Model of user info
 type User struct {
-	Id       ID // User Id
+	Id       UserID // User Id
 	Name     string
 	Password string
 	Email    string
